Добавлена возможность обновление аватара пользователем
