# src/app/Http/Controllers/Api/V1/UsersApiController.php
@@ -5,7 +5,11 @@ namespace App\Http\Controllers\Api\V1;
 use App\Http\Controllers\Api\ApiController;
 use App\Http\Requests\EditUsersRequest;
 use App\Http\Requests\GetUsersListRequest;
+use App\Jobs\MinimizeImage;
 use App\Repositories\User;
+use Illuminate\Http\Request;
+use Illuminate\Support\Facades\Auth;
+use Illuminate\Validation\Rule;
 
 class UsersApiController extends ApiController
 {
@@ -177,5 +181,85 @@ class UsersApiController extends ApiController
         $user->save();
 
         return $this->response->json(['status' =>'Update successfully', 'user' => $user], [], false);
+    }
+
+    /**
+     *
+     * @OA\Post  (
+     *     path="/users/{user_id}/upload_avatar",
+     *     tags = {"Users"},
+     *     summary="Обновление аватара пользователя",
+     *     description="Обновление аватара пользователя",
+     *     security={
+     *       {"Authorization": {}},
+     *     },
+     *
+     *     @OA\Parameter(
+     *         name="avatar",
+     *         in="query",
+     *         description="Аватар, обязательные требования к размеру: 640x640px",
+     *         required=false,
+     *         @OA\Schema(
+     *             type="file",
+     *         )
+     *     ),
+     *     @OA\Parameter(
+     *         name="user_id",
+     *         in="path",
+     *         description="Id пользователя",
+     *         required=true,
+     *         @OA\Schema(
+     *             type="integer",
+     *         )
+     *     ),
+     *     @OA\Response(
+     *          response="200",
+     *          description="Данный статус сигнализирует о том, что аватар пользователя был успешно загружен."
+     *      ),
+     *      @OA\Response(
+     *          response="401",
+     *          description="Ошибка аутентификации."
+     *      ),
+     *      @OA\Response(
+     *          response="422",
+     *          description="Ошибка валидации."
+     *      )
+     *
+     * )
+     */
+    public function uploadAvatar($user_id, Request $request)
+    {
+        $request->validate([
+            'avatar' => [
+                'required',
+                'image',
+                'max:10240',
+                Rule::dimensions()->maxHeight(640)->maxWidth(640)
+            ]
+        ]);
+
+        $user = app(User::class)->findById($user_id);
+
+        if (empty($user)) {
+            return $this->response->withNotFound('User not found');
+        }
+
+        if ($user->id !== Auth()->user()->id){
+            return $this->response->withForbidden("Failed to save changes. You do not have permission to update the user avatar.");
+        }
+
+        $avatar = $request->file('avatar');
+        $name = $user->id . '_' . $user->name . '.' . $avatar->extension();
+        $avatar_path = $avatar->storeAs('original', $name, ['disk' => 'avatars']);
+
+        if (!$avatar_path) {
+            return $this->response->withForbidden("Failed to save changes. Server error.");
+        }
+
+        app(User::class)->updateAvatar($user->id, $avatar_path);
+
+        MinimizeImage::dispatch($avatar_path, [32, 64, 128], 'avatars')->onQueue('avatars')->afterResponse();
+
+        return $this->response->json(['status' =>'Avatar upload successfully'], [], false);
     }
 }
